# jira-assistant

./: .codeclimate.yml  .gitignore  .mypy.ini  .pylintrc  .readthedocs.yaml  LICENSE  MANIFEST.in  README.rst  SECURITY.md  dev-requirements.txt  mkdocs.yml  pyproject.toml  pytest.ini  pytest.server.ini  setup.py
.github/workflows/: dependency-review.yml  mypy.yml  pylint.yml  python-3-linux-test.yml  python-3-macos-test.yml  python-3-windows-test.yml  python-publish.yml
docs/: about.md  gathering-information-from-jira.md  index.md  license.md  requirements.txt
docs/installation/: index.md  install_jira_assistant.md
docs/quick_start/: create_jira_story.md  gathering_jira_info.md  index.md  sort_excel_file.md
docs/reference/: generate_template.md  index.md  process_excel_file.md  update_jira_info.md
docs/tutorial/: developer_guide.md  generate_template.md  index.md
src/jira_assistant/: __init__.py  assistant.py  console_script.py  excel_definition.py  excel_operation.py  jira_client.py  milestone.py  priority.py  sprint_schedule.py  story.py  utils.py
src/jira_assistant/assets/: excel_definition.json  jira_field_type.json  sprint_schedule.json
tests/: __init__.py  conftest.py  mock_server.py  test_assistant.py  test_console_script.py  test_excel_definition.py  test_excel_operation.py  test_jira_client.py  test_milestone.py  test_priority.py  test_sprint_schedule.py  test_story.py  test_utils.py  utils.py
tests/assets/env_files/: default.env  default_cloud.env  missing_jira_access_token.env  missing_jira_url.env  missing_jira_user_email.env
tests/assets/files/: empty_excel.xlsx  excel_addition_columns.xlsx  excel_create_story_invalid_issue_type.xlsx  excel_create_story_invalid_project_type.xlsx  excel_create_story_missing_required_field.xlsx  excel_create_story_no_project_type.xlsx  excel_definition.json  excel_definition_avoid_jira_operations.json  excel_definition_create_jira_story_missing_issue_type.json  excel_definition_create_jira_story_missing_project_type.json  excel_definition_create_story.json  excel_definition_duplicate_column_name.json  excel_definition_duplicate_column_story_id.json  excel_definition_duplicate_index.json  excel_definition_duplicate_inline_weights.json  excel_definition_duplicate_jira_field.json  excel_definition_filter_out_story_based_on_jira_status_missing_pre_step.json  excel_definition_filter_out_story_based_on_jira_status_missing_status.json  excel_definition_index_not_continuation.json  excel_definition_invalid_index.json  excel_definition_invalid_inline_weights.json  excel_definition_invalid_name.json  excel_definition_invalid_pre_process_step_name.json  excel_definition_invalid_pre_process_step_priority.json  excel_definition_invalid_raise_ranking.json  excel_definition_invalid_require_sort.json  excel_definition_invalid_structure.txt  excel_definition_invalid_type.json  excel_definition_missing_story_id.json  excel_definition_strategy_duplicate_priority.json  excel_definition_strategy_invalid_name.json  excel_definition_with_raise_ranking.json  excel_duplicate_column.xlsx  excel_with_empty_row.xlsx  happy_path.xlsx  happy_path_create_story.xlsx  happy_path_create_story_invalid_value.xlsx  happy_path_missing_columns.xlsx  happy_path_with_no_need_sort_stories.xlsx  jira_field_type.json  (+3 more)
tests/assets/local_test/: excel_definition_for_creation.json  local_test.py
